@@ -18,7 +18,8 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.Collection;
-import java.util.stream.Collectors;
+
+import static java.util.stream.Collectors.toList;
 
 @Service
 @RequiredArgsConstructor
@@ -40,7 +41,7 @@ public class MemberServiceImpl implements MemberService {
         // 사용자의 권한 정보 생성
         Collection<? extends GrantedAuthority> authorities = member.getRoles().stream()
                 .map(SimpleGrantedAuthority::new)
-                .collect(Collectors.toList());
+                .toList();
 
         return jwtTokenProvider.createToken(member, authorities);
     }
